--- a/src/main/resources/APachas/src/app/components/authUser/login/login.component.html
+++ b/src/main/resources/APachas/src/app/components/authUser/login/login.component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="container">
         <div class="user signinBx">
-            <div class="imgBx"><img src="../../../assets/LoginMoney.jpg"></div>
+            <div class="imgBx"><img src="../../../../assets/LoginMoney.jpg"></div>
             <div class="formBx">
                 <form (submit)="logIn()" ngNativeValidate #loginForm="ngForm">
                     <h2>Iniciar sesión en <a href="/home"><br>¡A pachas!</a></h2>
