--- a/src/main/resources/APachas/src/app/components/authUser/register/register.component.html
+++ b/src/main/resources/APachas/src/app/components/authUser/register/register.component.html
@@ -78,7 +78,7 @@
                     <p class="signin">¿tienes una cuenta? <a href="login"> Inicia sesión</a></p>
                 </form>
             </div>
-            <div class="imgBx"><img src="../../../assets/RegisterMoney.jpg"></div>
+            <div class="imgBx"><img src="../../../../assets/RegisterMoney.jpg"></div>
         </div>
     </div>
 </section>
