--- a/src/main/resources/APachas/src/app/components/users/detailUser/detailUser.component.html
+++ b/src/main/resources/APachas/src/app/components/users/detailUser/detailUser.component.html
@@ -7,9 +7,16 @@
                 <h5 class="modal-title title">
                     {{user.userLogin}}
                 </h5>
-                <div class="statusDiv">
-                    <button type="button" class="button" title="Cambiar de estado"
-                            data-bs-toggle="modal" data-bs-target="#messageConfirmModal">{{status}}</button>
+                <div class="dropdown">
+                    <a class="btn btn-neutral dropdown-toggle drop" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="zmdi zmdi-label"></i>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <li>
+                            <button type="button" class="dropdown-item buttonText" title="Cambiar de estado"
+                                    data-bs-toggle="modal" data-bs-target="#messageConfirmModal">{{getMessageStatus()}}</button>
+                        </li>
+                    </ul>
                 </div>
                 <button type="button" id="closeButton" class="btn-close closeButton"  data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -26,93 +33,112 @@
                                     <img class="imageUser" [src]="defaultImage">
                                 </ng-template>
                             </div>
-                            <p class="text">AMIGOS COMUNES</p>
+                            <p class="text subtitle">AMIGOS COMUNES</p>
                             <div class="paginationMutualDiv col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                                 <div class="row">
-                                    <div *ngFor="let user of mutualFriends" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                                        <ng-container *ngIf="user.userPhoto; else userImagesDiv">
-                                            <p class="imageP">
-                                                <img class="imageMutuals"
-                                                     [src]="user.userPhoto" alt="" id="detailMutualUser_photo">
-                                            </p>
-                                            <p class="mutual">
-                                                {{user.userLogin}}
-                                            </p>
-                                        </ng-container>
-                                        <ng-template #userImagesDiv>
-                                            <p class="imageP">
-                                                <img class="imageMutuals" [src]="defaultImage">
-                                            </p>
-                                            <p class="mutual">
-                                                {{user.userLogin}}
-                                            </p>
-                                        </ng-template>
-                                    </div>
-                                    <div *ngIf="pageMutualFriends > 0" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getLessMutualFriends();"><a>
-                                        Ver menos</a></div>
-                                    <div *ngIf="mutualFriends.length < totalMutualFriends" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getMoreMutualFriends();"><a>
-                                        Ver más</a></div>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12 mutualBorder">
-                                <p class="text">GRUPOS COMUNES</p>
-                                <div class="paginationMutualDiv mutualRight col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                                    <div class="row">
-                                        <div *ngFor="let group of mutualGroups" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                                            <ng-container *ngIf="group.groupPhoto; else groupImagesDiv">
+                                    <ng-container  *ngIf="mutualFriends.length !=0; else mutualFriendsDiv">
+                                        <div *ngFor="let user of mutualFriends" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                            <ng-container *ngIf="user.userPhoto; else userImagesDiv">
                                                 <p class="imageP">
                                                     <img class="imageMutuals"
-                                                         [src]="group.groupPhoto" alt="" id="detailMutualGroup_photo">
+                                                         [src]="user.userPhoto" alt="" id="detailMutualUser_photo">
                                                 </p>
                                                 <p class="mutual">
-                                                    {{group.groupName}}
+                                                    {{user.userLogin}}
                                                 </p>
                                             </ng-container>
-                                            <ng-template #groupImagesDiv>
+                                            <ng-template #userImagesDiv>
                                                 <p class="imageP">
-                                                    <img class="imageMutuals" [src]="defaultGroupImage">
+                                                    <img class="imageMutuals" [src]="defaultImage">
                                                 </p>
                                                 <p class="mutual">
-                                                    {{group.groupName}}
+                                                    {{user.userLogin}}
                                                 </p>
                                             </ng-template>
                                         </div>
-                                        <div *ngIf="mutualGroups.length > 2" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getLessMutualGroups()"><a>
+                                        <div *ngIf="pageMutualFriends > sizeMutualFriends" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getLessMutualFriends();"><a>
                                             Ver menos</a></div>
-                                        <div *ngIf="mutualGroups.length < totalMutualGroups" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getMoreMutualGroups()"><a>
+                                        <div *ngIf="mutualFriends.length < totalMutualFriends" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getMoreMutualFriends();"><a>
                                             Ver más</a></div>
-                                    </div>
-
-                                </div>
-                            <p class="text">EVENTOS COMUNES</p>
-                            <div class="paginationMutualDiv mutualRight col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                                <div class="row">
-                                <div *ngFor="let event of mutualEvents" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                                    <ng-container *ngIf="event.eventPhoto; else eventImagesDiv">
-                                        <p class="imageP">
-                                            <img class="imageMutuals"
-                                                 [src]="event.eventPhoto" alt="" id="detailMutualEvent_photo">
-                                        </p>
-                                        <p class="mutual">
-                                            {{event.eventName}}
-                                        </p>
                                     </ng-container>
-                                    <ng-template #eventImagesDiv>
-                                        <p class="imageP">
-                                            <img class="imageMutuals" [src]="defaultEventImage">
-                                        </p>
-                                        <p class="mutual">
-                                            {{event.eventName}}
-                                        </p>
+                                    <ng-template #mutualFriendsDiv>
+                                        <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                                            <p class="text">No existen amigos comunes</p>
+                                        </div>
                                     </ng-template>
                                 </div>
-                                <div *ngIf="pageMutualEvents > 2" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getLessMutualEvents();"><a>
-                                    Ver menos</a></div>
-                                <div *ngIf="mutualEvents.length < totalMutualEvents" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getMoreMutualEvents();"><a>
-                                    Ver más</a></div>
                             </div>
+                        </div>
+                        <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12 mutualBorder">
+                                <p class="text subtitle">GRUPOS COMUNES</p>
+                                <div class="paginationMutualDiv mutualRight col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                    <div class="row">
+                                        <ng-container  *ngIf="mutualGroups.length !=0; else mutualGroupsDiv">
+                                            <div *ngFor="let group of mutualGroups" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                                <ng-container *ngIf="group.groupPhoto; else groupImagesDiv">
+                                                    <p class="imageP">
+                                                        <img class="imageMutuals"
+                                                             [src]="group.groupPhoto" alt="" id="detailMutualGroup_photo">
+                                                    </p>
+                                                    <p class="mutual">
+                                                        {{group.groupName}}
+                                                    </p>
+                                                </ng-container>
+                                                <ng-template #groupImagesDiv>
+                                                    <p class="imageP">
+                                                        <img class="imageMutuals" [src]="defaultGroupImage">
+                                                    </p>
+                                                    <p class="mutual">
+                                                        {{group.groupName}}
+                                                    </p>
+                                                </ng-template>
+                                            </div>
+                                            <div *ngIf="mutualGroups.length > sizeMutualGroups" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getLessMutualGroups()"><a>
+                                                Ver menos</a></div>
+                                            <div *ngIf="mutualGroups.length < totalMutualGroups" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getMoreMutualGroups()"><a>
+                                                Ver más</a></div>
+                                        </ng-container>
+                                        <ng-template #mutualGroupsDiv>
+                                            <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                                                <p class="text">No existen grupos comunes</p>
+                                            </div>
+                                        </ng-template>
+                                    </div>
+                                </div>
+                            <p class="text subtitle">EVENTOS COMUNES</p>
+                            <div class="paginationMutualDiv mutualRight col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                <div class="row">
+                                    <ng-container  *ngIf="mutualEvents.length !=0; else mutualEventsDiv">
+                                        <div *ngFor="let event of mutualEvents" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                            <ng-container *ngIf="event.eventPhoto; else eventImagesDiv">
+                                                <p class="imageP">
+                                                    <img class="imageMutuals"
+                                                         [src]="event.eventPhoto" alt="" id="detailMutualEvent_photo">
+                                                </p>
+                                                <p class="mutual">
+                                                    {{event.eventName}}
+                                                </p>
+                                            </ng-container>
+                                            <ng-template #eventImagesDiv>
+                                                <p class="imageP">
+                                                    <img class="imageMutuals" [src]="defaultEventImage">
+                                                </p>
+                                                <p class="mutual">
+                                                    {{event.eventName}}
+                                                </p>
+                                            </ng-template>
+                                        </div>
+                                        <div *ngIf="pageMutualEvents > sizeMutualEvents" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getLessMutualEvents();"><a>
+                                            Ver menos</a></div>
+                                        <div *ngIf="mutualEvents.length < totalMutualEvents" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getMoreMutualEvents();"><a>
+                                            Ver más</a></div>
+                                    </ng-container>
+                                    <ng-template #mutualEventsDiv>
+                                        <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                                            <p class="text">No existen eventos comunes</p>
+                                        </div>
+                                    </ng-template>
+                                </div>
                             </div>
                         </div>
                     </div>
