--- a/src/main/resources/APachas/src/app/components/users/listUsers/listUsers.component.html
+++ b/src/main/resources/APachas/src/app/components/users/listUsers/listUsers.component.html
@@ -6,30 +6,35 @@
 </div>
 <app-detailUser (eventDetail)="setSelectedUser($event)" (eventMessage)="getUsers()" [user]="selectedUser" [previous] = "getPrevious()" [next] = "getNext()" [status]="status"></app-detailUser>
 <div class="row row-cols-1 row-cols-xxl-3 row-cols-xl-3 row-cols-lg-2 row-cols-md-2 row-cols-sm-1 g-4">
-    <div *ngFor="let user of users">
-        <div class="col">
-            <div class="card mb-3 color" data-bs-toggle="modal" data-bs-target="#detailUserModal" (click)="selectUser(users.indexOf(user))">
-                <div class="row g-0">
-                    <div class="col-xxl-5 col-xl-12 col-lg-5 col-md-12 col-sm-5">
-                        <ng-container *ngIf="user.userPhoto != null; else imagesDiv">
-                            <img class="image" [src]="images[user.userId]">
-                        </ng-container>
-                        <ng-template #imagesDiv>
-                            <img class="image" [src]="defaultImage">
-                        </ng-template>
-                    </div>
-                    <div class="col-xxl-7 col-xl-12 col-lg-7 col-md-12 col-sm-7">
-                        <div class="card-body-xxl-7 card-body-xl-12 card-body-lg-7 card-body-md-12 card-body-sm-7">
-                            <h5 class="title">{{user.userLogin}}</h5>
-                            <p class="card-text">
-                                <a class="message">{{friends[user.userId]}}</a>
-                            </p>
+    <ng-container *ngIf="users.length !=0; else usersDiv">
+        <div *ngFor="let user of users">
+            <div class="col">
+                <div class="card mb-3 color" data-bs-toggle="modal" data-bs-target="#detailUserModal" (click)="selectUser(users.indexOf(user))">
+                    <div class="row g-0">
+                        <div class="col-xxl-5 col-xl-12 col-lg-5 col-md-12 col-sm-5">
+                            <ng-container *ngIf="user.userPhoto != null; else imagesDiv">
+                                <img class="image" [src]="images[user.userId]">
+                            </ng-container>
+                            <ng-template #imagesDiv>
+                                <img class="image" [src]="defaultImage">
+                            </ng-template>
+                        </div>
+                        <div class="col-xxl-7 col-xl-12 col-lg-7 col-md-12 col-sm-7">
+                            <div class="card-body-xxl-7 card-body-xl-12 card-body-lg-7 card-body-md-12 card-body-sm-7">
+                                <h5 class="title">{{user.userLogin}}</h5>
+                                <p class="card-text">
+                                    <a class="message">{{friends[user.userId]}}</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </ng-container>
+    <ng-template #usersDiv>
+       <p class="text">NO EXISTEN USUARIOS</p>
+    </ng-template>
 </div>
 <div class="paginationDiv">
     <ul class="row pagination">
