--- a/src/main/resources/APachas/src/app/components/confirm/messageConfirm.component.html
+++ b/src/main/resources/APachas/src/app/components/confirm/messageConfirm.component.html
@@ -10,8 +10,8 @@
                 <div class="col container-fluid">
                     <div class="row">
                         <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 buttons">
-                            <button type="button" id="refuseButton" data-bs-dismiss="modal" class="button close" (click)="onConfirm(false);">
-                                    Cancelar
+                            <button type="button" id="cancelButton" data-bs-dismiss="modal" class="button close" (click)="onConfirm(false);">
+                                    Denegar
                             </button>
                         </div>
                         <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 buttons">
