--- a/src/main/resources/APachas/src/app/components/events/listEvents/listEvents.component.html
+++ b/src/main/resources/APachas/src/app/components/events/listEvents/listEvents.component.html
@@ -6,7 +6,7 @@
                            [(ngModel)]="eventName" required #eventNameForm="ngModel" aria-label="Search">
             </form>
         </div>
-        <div class="col-xxl-1 col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1">
+        <div class="col-xxl-1 col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1 dropd">
             <div class="dropdown dropAlign">
                 <a class="btn btn-neutral dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="zmdi zmdi-more-vert iSize"></i>
@@ -18,7 +18,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-xxl-1 col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1 createDiv">
+        <div class="col-xxl-1 col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1">
             <button type="button" class="button" data-bs-toggle="modal" data-bs-target="#createEventModal" (click)="setEvent();">Añadir</button>
         </div>
     </div>
