--- a/src/main/resources/APachas/src/app/components/users/detailUser/detailUser.component.css
+++ b/src/main/resources/APachas/src/app/components/users/detailUser/detailUser.component.css
@@ -11,7 +11,10 @@
 .drop{
     margin-top: 5px;
     margin-left: -5px;
+}
 
+.dropdown-item:hover, .dropdown-item:focus {
+    background-color: rgba(102, 187, 106, 0.1);
 }
 
 .buttonText{
