--- a/src/main/resources/APachas/src/app/components/events/detailEvent/detailEvent.component.css
+++ b/src/main/resources/APachas/src/app/components/events/detailEvent/detailEvent.component.css
@@ -23,6 +23,10 @@
 
 }
 
+.dropdown-item:hover, .dropdown-item:focus {
+    background-color: rgba(102, 187, 106, 0.1);
+}
+
 .buttonText{
     text-decoration: none;
     border: 1px solid #ffffff;
@@ -99,6 +103,10 @@
     font-weight: 300;
     color: #333;
     outline: none;
+}
+
+.modal-footer{
+    margin-top: -30px;
 }
 
 div.paginationPartakerDiv {
